izmene za testove i integration test
